fix responsiveness issue on mobile

--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -24,10 +24,26 @@ body {
   background-color: $page-bg;
   font-family: $font-primary;
   display: flex;
-  justify-content: center;
+  justify-content: flex-start;
+  align-items: stretch;
+  height: 100vh;
+  width: 100vw;
   padding: 0;
   margin: 0;
   letter-spacing: 0.05em;
+  box-sizing: border-box;
+}
+
+html {
+  height: 100%;
+  width: 100vw;
+  overflow: hidden;
+}
+
+#root {
+  width: 100vw;
+  height: 100vh;
+  display: flex;
 }
 
 // Typography
