--- a/src/styles/_layout.scss
+++ b/src/styles/_layout.scss
@@ -6,7 +6,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: flex-start;
-  min-height: 100vh;
+  height: 100%;
   width: 100%;
   padding: 8px;
   box-sizing: border-box;
