--- a/src/styles/_tiles.scss
+++ b/src/styles/_tiles.scss
@@ -3,8 +3,9 @@
 // Digger area container
 .diggerarea {
   position: relative;
-  width: fit-content;
-  margin: 0 auto;
+  display: inline-block; // shrink-wrap to board content
+  max-width: 100%;
+  overflow: hidden;
 }
 
 // Responsive Grid Board
@@ -18,6 +19,7 @@
   width: fit-content;
   margin: 0 auto;
   overflow: visible;
+  max-width: calc(100vw - 16px);
 }
 
 // Tile Base Styles
